--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,21 +1,22 @@
-name: CI/CD for Hospital Frontend
+name: Deploy Frontend
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: "18"
+          node-version: 18
 
       - name: Install dependencies
         run: npm install
@@ -23,27 +24,26 @@ jobs:
       - name: Build project
         run: npm run build
 
-      - name: Upload production-ready build
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: build
-          path: ./dist
+          name: github-pages
+          path: dist/
 
   deploy:
     needs: build-deploy
     runs-on: ubuntu-latest
-    permissions:
-      pages: write
-      id-token: write
-    environment:
-      name: github-pages
 
     steps:
-      - name: Download build artifact
+      - name: Download Artifact
         uses: actions/download-artifact@v4
         with:
-          name: build
-          path: .
+          name: github-pages
 
       - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v4
+        uses: actions/upload-pages-artifact@v2
+        with:
+          path: github-pages
+
+      - name: Deploy
+        uses: actions/deploy-pages@v1
