--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,15 +2,18 @@ name: Deploy Frontend
 
 on:
   push:
-    branches:
-      - main
+    branches: ["main"]
+
+permissions:
+  pages: write
+  id-token: write
 
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Setup Node.js
@@ -19,12 +22,12 @@ jobs:
           node-version: 18
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Build project
         run: npm run build
 
-      - name: Upload artifact
+      - name: Upload build artifact
         uses: actions/upload-artifact@v4
         with:
           name: github-pages
@@ -33,17 +36,24 @@ jobs:
   deploy:
     needs: build-deploy
     runs-on: ubuntu-latest
+    environment: github-pages
 
     steps:
-      - name: Download Artifact
+      - name: Download artifact
         uses: actions/download-artifact@v4
         with:
           name: github-pages
+          path: ./build
+
+      - name: Configure git identity (Fix exit code 128)
+        run: |
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
+
+      - name: Upload pages artifact
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: ./build
 
       - name: Deploy to GitHub Pages
-        uses: actions/upload-pages-artifact@v2
-        with:
-          path: github-pages
-
-      - name: Deploy
         uses: actions/deploy-pages@v1
