--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,47 +1,75 @@
-name: Build and Deploy Frontend
+name: Deploy Ecommerce Fullstack App on EC2
 
 on:
   push:
     branches:
       - main
+  workflow_dispatch:   # allow manual run from GitHub UI
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 18
-
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build project
-        run: npm run build
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: production-files
-          # Change this if your build folder is different
-          path: build/
-          # OR path: dist/  (Angular/Vite)
-  
   deploy:
-    needs: build
     runs-on: ubuntu-latest
-    permissions:
-      pages: write
-      id-token: write
 
     steps:
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: production-files
+      # Step 1: Checkout repo
+      - name: Checkout Repo
+        uses: actions/checkout@v3
 
-      - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v4
+      # Step 2: Debug - list files in repo
+      - name: List repo files
+        run: ls -R
+
+      # Step 3: Copy files to EC2 inside ~/ecommercefullstack
+      - name: Copy repo to EC2
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ubuntu   # or ubuntu if Ubuntu server
+          key: ${{ secrets.EC2_SSH_KEY }}
+          source: "./*"
+          target: /home/ubuntu/ecommercefullstack
+ 
+
+      # Step 4: SSH into EC2 and deploy with Docker Compose
+      - name: Deploy on EC2 with Docker Compose
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ubuntu    # ✅ Amazon Linux user
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script_stop: true
+          debug: true
+          script: |
+            
+            cd ~/ecommercefullstack
+
+            # Install Git if missing
+            if ! command -v git &> /dev/null; then
+            echo "Installing Git..."
+            sudo apt-get update -y
+            sudo apt-get install -y git
+            fi
+
+            # Install Docker if missing
+            if ! command -v docker &> /dev/null; then
+            echo "Installing Docker..."
+            sudo apt-get update -y
+            sudo apt-get install -y ca-certificates curl gnupg lsb-release
+
+            sudo mkdir -p /etc/apt/keyrings
+            curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
+
+            echo \
+                "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu \
+                $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+
+            sudo apt-get update -y
+            sudo apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
+
+            sudo systemctl enable docker
+            sudo systemctl start docker
+            fi
+
+            # Stop old containers, rebuild, and restart (with sudo)
+            sudo docker compose down
+            sudo docker compose up -d --build
